Updated Hit, Damage and Initiative calculations to consolidate their bonuses for easier reading on mouse over

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1452,7 +1452,7 @@
             <td><input type="text" name="attr_attacknum" title="@{attacknum}" class="sheet-small"></td>
             <td><input type="text" name="attr_attackadj" title="@{attackadj}" class="sheet-small" value="0"></td>
             <td><input type="text" name="attr_ThAC0" title="@{ThAC0}" class="sheet-short" value="20"></td>
-            <td><button type="roll" name="roll_hit1" title="%{hit1}" value="/em hits an AC of [[@{ThAC0}-((1d20cs>@{crit-thresh})+(@{attackadj})+(@{specialist-attack})+((@{strengthhit})*@{strbonus})+(@{banded-mail})+(@{brigandine})+(@{chainmail-bronzeplate})+(@{field-plate})+(@{full-plate})+(@{leather-hide-padded})+(@{plate-mail})+(@{ring-mail})+(@{scale-mail})+(@{splint-mail})+(@{studded-leather})+(?{Misc. bonus|0}))]] using their @{weaponname}">Hit</button></td>
+            <td><button type="roll" name="roll_hit1" title="%{hit1}" value="/em hits an AC of [[@{ThAC0}-(1d20cs>@{crit-thresh}+[[(@{attackadj})+(@{specialist-attack})+((@{strengthhit})*@{strbonus})+(@{banded-mail})+(@{brigandine})+(@{chainmail-bronzeplate})+(@{field-plate})+(@{full-plate})+(@{leather-hide-padded})+(@{plate-mail})+(@{ring-mail})+(@{scale-mail})+(@{splint-mail})+(@{studded-leather})+(?{Misc. bonus|0})]])]] using their @{weaponname}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh" title="@{crit-thresh}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range" title="@{range}" class="sheet-short"></td>
             <td><input type="text" name="attr_size" title="@{size}" class="sheet-small"></td>
@@ -1460,17 +1460,19 @@
             <td class="centering"><input type="checkbox" name="attr_weaptype-pierce" title="@{weaptype-pierce}" value="1"/><span></span></td>
             <td class="centering"><input type="checkbox" name="attr_weaptype-blunt" title="@{weaptype-blunt}" value="1"/><span></span></td>
             <td><input type="text" name="attr_weapspeed" title="@{weapspeed}" class="sheet-small"></td>
-            <td><button type="roll" name="roll_init" title="%{init}" value="/gmroll [[{([[1d10]]+@{weapspeed}-?{Misc. bonus|+0}), 1}kh1]] [Initiative (@{weaponname})]&{tracker}">Initiative</button></td>
+            <td><button type="roll" name="roll_init" title="%{init}" value="/gmroll [[{([[1d10]]+[[@{weapspeed}-(?{Misc. bonus|0})]]), 1}kh1]] [Initiative (@{weaponname})]&{tracker}">Initiative</button></td>
     </tr>
     </table>
-<fieldset name="repeating_weapons" title="@{weapons}" class="repeating_weapons"><table style='border-collapse: collapse; border-spacing: 0;'>
+<fieldset name="repeating_weapons" title="@{weapons}" class="repeating_weapons">
+<table style='border-collapse: collapse; border-spacing: 0;'>
     <tr>
             <td class="centering"><input type='checkbox' name='attr_strbonus' title="@{repeating_weapons_$X_dexbonus}" value='1' checked /><span></span></td>
             <td><input type="text" name="attr_weaponname" title="@{repeating_weapons_$X_weaponname}" class="sheet-middle"></td>
             <td class="centering"><input type="checkbox" name="attr_specialist-attack" title="@{repeating_weapons_$X_specialist-attack}" value="1"/><span></span></td>
             <td><input type="text" name="attr_attacknum" title="@{repeating_weapons_$X_attacknum}" class="sheet-small"></td>
             <td><input type="text" name="attr_attackadj" title="@{repeating_weapons_$X_attackadj}" class="sheet-small" value="0"></td>
-            <td><input type="text" name="attr_ThAC0" title="@{repeating_weapons_$X_ThAC0}" class="sheet-short" value="20"><button type="roll" name="roll_hit1" title="%{repeating_weapons_$X_hit1}" value="/em hits an AC of [[@{ThAC0}-((1d20cs>@{crit-thresh})+(@{attackadj})+(@{specialist-attack})+((@{strengthhit})*@{strbonus})+((@{dexmissile})*@{dexbonus})+(@{banded-mail})+(@{brigandine})+(@{chainmail-bronzeplate})+(@{field-plate})+(@{full-plate})+(@{leather-hide-padded})+(@{plate-mail})+(@{ring-mail})+(@{scale-mail})+(@{splint-mail})+(@{studded-leather})+(?{Misc. bonus|0}))]] using their @{weaponname}">Hit</button></td>
+            <td><input type="text" name="attr_ThAC0" title="@{repeating_weapons_$X_ThAC0}" class="sheet-short" value="20"></td>
+            <td><button type="roll" name="roll_hit1" title="%{repeating_weapons_$X_hit1}" value="/em hits an AC of [[@{ThAC0}-(1d20cs>@{crit-thresh}+[[(@{attackadj})+(@{specialist-attack})+((@{strengthhit})*@{strbonus})+(@{banded-mail})+(@{brigandine})+(@{chainmail-bronzeplate})+(@{field-plate})+(@{full-plate})+(@{leather-hide-padded})+(@{plate-mail})+(@{ring-mail})+(@{scale-mail})+(@{splint-mail})+(@{studded-leather})+(?{Misc. bonus|0})]])]] using their @{weaponname}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh" title="@{repeating_weapons_$X_crit-thresh}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range" title="@{repeating_weapons_$X_range}" class="sheet-short"></td>
             <td><input type="text" name="attr_size" title="@{repeating_weapons_$X_size}" class="sheet-small"></td>
@@ -1478,9 +1480,11 @@
             <td class="centering"><input type="checkbox" name="attr_weaptype-pierce" title="@{repeating_weapons_$X_weaptype-pierce}" value="1"/><span></span></td>
             <td class="centering"><input type="checkbox" name="attr_weaptype-blunt" title="@{repeating_weapons_$X_weaptype-blunt}" value="1"/><span></span></td>
             <td><input type="text" name="attr_weapspeed" title="@{repeating_weapons_$X_weapspeed}" class="sheet-small"></td>
-            <td><button type="roll" name="roll_init" title="%{repeating_weapons_$X_init}" value="/gmroll [[{([[1d10]]+@{weapspeed}-?{Misc. bonus|+0}), 1}kh1]] [Initiative (@{weaponname})]&{tracker}">Initiative</button></td>
+            <td><button type="roll" name="roll_init" title="%{repeating_weapons_$X_init}" value="/gmroll [[{([[1d10]]+[[@{weapspeed}-(?{Misc. bonus|0})]]), 1}kh1]] [Initiative (@{weaponname})]&{tracker}">Initiative</button></td>
     </tr>
-</table></fieldset><br>
+</table>
+</fieldset>
+        <br>
 <h4><b>Melee Damage</b></h4><br><h4><b>You can use + to denote different sources for bonuses.</b></h4><br><br><table style='border-collapse: collapse; border-spacing: 0;'>
     <tr>
             <th class="default-header" title="Strength damage adjustment">Str</th>
@@ -1496,9 +1500,9 @@
             <td><input type="checkbox" name="attr_specialist-damage" title="@{specialist-damage}" value="2"/><span></span></td>
             <td><input type="text" name="attr_damadj" title="@{damadj}" class="sheet-small" value="0"></td>
             <td><input type="text" name="attr_damsm" title="@{damsm}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attacksm" title="%{attacksm}" value="/em rolls [[@{damsm}+(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]] damage using their @{weaponname1}!"></button></td>
+            <td><button type="roll" name="roll_attacksm" title="%{attacksm}" value="/em rolls [[@{damsm}+[[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
             <td><input type="text" name="attr_daml" title="@{daml}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attackl" title="%{attackl}" value="/em rolls [[@{daml}+(@{damadj})+(@{specialist-damage})+(@{mastery-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]] damage using their @{weaponname1}!"></button></td>
+            <td><button type="roll" name="roll_attackl" title="%{attackl}" value="/em rolls [[@{daml}+[[(@{damadj})+(@{specialist-damage})+(@{mastery-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
     </tr>
     </table>
 <fieldset name="repeating_weapons" title="@{weapons-damage}" class="repeating_weapons-damage"><table style='border-collapse: collapse; border-spacing: 0;'>
@@ -1508,9 +1512,9 @@
             <td class="centering"><input type="checkbox" name="attr_specialist-damage" title="@{repeating_weapons-damage_$X_specialist-damage}" value="2"/><span></span></td>
             <td><input type="text" name="attr_damadj" title="@{repeating_weapons-damage_$X_damadj}" class="sheet-small" value="0"></td>
             <td><input type="text" name="attr_damsm" title="@{repeating_weapons-damage_$X_damsm}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attacksm" title="%{repeating_weapons-damage_$X_attacksm}" value="/em rolls [[@{damsm}+(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]] damage using their @{weaponname1}!"></button></td>
+            <td><button type="roll" name="roll_attacksm" title="%{repeating_weapons-damage_$X_attacksm}" value="/em rolls [[@{damsm}+[[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
             <td><input type="text" name="attr_daml" title="@{repeating_weapons-damage_$X_daml}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attackl" title="%{repeating_weapons-damage_$X_attackl}" value="/em rolls [[@{daml}+(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]] damage using their @{weaponname1}!"></button></td>
+            <td><button type="roll" name="roll_attackl" title="%{repeating_weapons-damage_$X_attackl}" value="/em rolls [[@{daml}+[[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
     </tr>
 </table></fieldset><br><h4><b>Special Abilities and Attacks</b></h4><br><textarea name="attr_abilitiesnotes" title="@{abilitiesnotes}" placeholder="You can optionally use these macros in place of your ThAC0 advancement. (Be sure to insert your relevant class level into the macro. If you are not sure which one to use, mouse over the level box to retrieve its call.): Fighters - 21-@{level-class#} | Wizard - 21-ceil(@{level-class#}/3) | Priest - 22-(ceil(@{level-class#}/3)*2) | Rogue - 21-ceil(@{level-class#}/2) | Psion - 21-ceil(@{level-class#}/2)"></textarea><br>
 <h4><b>Weapon Notes</b></h4><br><textarea name="attr_weaponnotes" title="@{weaponnotes}"></textarea><hr>
@@ -1609,7 +1613,7 @@
             <td><input type="text" name="attr_attacknum2" title="@{attacknum2}" class="sheet-short"></td>
             <td><input type="text" name="attr_attackadj2" title="@{attackadj2}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_ThAC02" title="@{ThAC02}" class="sheet-short" value="20"></td>
-            <td><button type="roll" name="roll_hit12" title="%{hit12}" value="/em hits an AC of [[@{ThAC02}-((1d20cs>@{crit-thresh2})+(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0}))]] using their @{weaponname2}">Hit</button></td>
+            <td><button type="roll" name="roll_hit12" title="%{hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+[[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]])]] using their @{weaponname2}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh2" title="@{crit-thresh2}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range2" title="@{range2}" class="sheet-mintext"></td>
             <td><input type="text" name="attr_size2" title="@{size2}" class="sheet-small"></td>
@@ -1617,7 +1621,7 @@
             <td class="centering"><input type="checkbox" name="attr_weaptype-pierce2" title="@{weaptype-pierce2}" value="1"/><span></span></td>
             <td class="centering"><input type="checkbox" name="attr_weaptype-blunt2" title="@{weaptype-blunt2}" value="1"/><span></span></td>
             <td><input type="text" name="attr_weapspeed2" title="@{weapspeed2}" class="sheet-small"></td>
-            <td><button type="roll" name="roll_init2" title="%{init2}" value="/gmroll [[{([[1d10]]+@{weapspeed2}-?{Misc. bonus|+0}), 1}kh1]] [Initiative (@{weaponname2})]&{tracker}">Initiative</button></td>
+            <td><button type="roll" name="roll_init2" title="%{init2}" value="/gmroll [[{([[1d10]]+[[@{weapspeed2}-(?{Misc. bonus|0})]]), 1}kh1]] [Initiative (@{weaponname2})]&{tracker}">Initiative</button></td>
     </tr>
     </table>
 <fieldset name="repeating_weapons2" title="@{weapons2}" class="repeating_weapons2">
@@ -1633,7 +1637,7 @@
             <td><input type="text" name="attr_attacknum2" title="@{repeating_weapons2_$X_attacknum2}" class="sheet-short"></td>
             <td><input type="text" name="attr_attackadj2" title="@{repeating_weapons2_$X_attackadj2}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_ThAC02" title="@{repeating_weapons2_$X_ThAC02}" class="sheet-short" value="20"></td>
-            <td><button type="roll" name="roll_hit12" title="%{repeating_weapons2_$X_hit12}" value="/em hits an AC of [[@{ThAC02}-((1d20cs>@{crit-thresh2})+(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0}))]] using their @{weaponname2}">Hit</button></td>
+            <td><button type="roll" name="roll_hit12" title="%{repeating_weapons2_$X_hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+[[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]])]] using their @{weaponname2}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh2" title="@{repeating_weapons2_$X_crit-thresh2}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range2" title="@{repeating_weapons2_$X_range2}" class="sheet-mintext"></td>
             <td><input type="text" name="attr_size2" title="@{repeating_weapons2_$X_size2}" class="sheet-small"></td>
@@ -1641,7 +1645,7 @@
             <td class="centering"><input type="checkbox" name="attr_weaptype-pierce2" title="@{repeating_weapons2_$X_weaptype-pierce2}" value="1"/><span></span></td>
             <td class="centering"><input type="checkbox" name="attr_weaptype-blunt2" title="@{repeating_weapons2_$X_weaptype-blunt2}" value="1"/><span></span></td>
             <td><input type="text" name="attr_weapspeed2" title="@{repeating_weapons2_$X_weapspeed2}" class="sheet-small"></td>
-            <td><button type="roll" name="roll_init2" title="%{repeating_weapons2_$X_init2}" value="/gmroll [[{([[1d10]]+@{weapspeed2}-?{Misc. bonus|+0}), 1}kh1]] [Initiative (@{weaponname2})]&{tracker}">Initiative</button></td>
+            <td><button type="roll" name="roll_init2" title="%{repeating_weapons2_$X_init2}" value="/gmroll [[{([[1d10]]+[[@{weapspeed2}-(?{Misc. bonus|0})]]), 1}kh1]] [Initiative (@{weaponname2})]&{tracker}">Initiative</button></td>
     </tr>
 </table>
 </fieldset>
@@ -1650,7 +1654,6 @@
 <h4><b>Ammunition</b></h4><br><h4><b>You can use + to denote different sources for bonuses.</b></h4>
         <br>
         <br>
-
 <table style='border-collapse: collapse; border-spacing: 0;'>
     <tr>
             <th class="default-header" title="Strength damage adjustment">Str</th>
@@ -1665,9 +1668,9 @@
             <td><input type="text" name="attr_ammoname" title="@{ammoname}" class="sheet-middle"></td>
             <td><input type="text" name="attr_damadj2" title="@{damadj2}" class="sheet-small" value="0"></td>
             <td><input type="text" name="attr_damsm2" title="@{damsm2}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attacksm2" title="%{attacksm2}" value="/em rolls [[@{damsm2}+(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]] damage using their @{ammoname}!"></button></td>
+            <td><button type="roll" name="roll_attacksm2" title="%{attacksm2}" value="/em rolls [[@{damsm2}+[[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]]]] damage using their @{ammoname}!"></button></td>
             <td><input type="text" name="attr_daml2" title="@{daml2}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attackl2" title="%{attackl2}" value="/em rolls [[@{daml2}+(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]] damage using their @{ammoname}!"></button></td>
+            <td><button type="roll" name="roll_attackl2" title="%{attackl2}" value="/em rolls [[@{daml2}+[[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]]]] damage using their @{ammoname}!"></button></td>
             <td><input type="number" name="attr_ammoremain" title="@{ammoremain}" class="sheet-short"></td>
     </tr>
     </table>
