Adding styling to some missing fields

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1497,7 +1497,7 @@
     <tr>
             <td class="sheet-centering"><input type='checkbox' name='attr_strbonus1' title="@{strbonus1}" value='1' checked /><span></span></td>
             <td><input type="text" name="attr_weaponname1" title="@{weaponname1}" class="sheet-middle"></td>
-            <td><input type="checkbox" name="attr_specialist-damage" title="@{specialist-damage}" value="2"/><span></span></td>
+            <td class="sheet-centering"><input type="checkbox" name="attr_specialist-damage" title="@{specialist-damage}" value="2"/><span></span></td>
             <td><input type="text" name="attr_damadj" title="@{damadj}" class="sheet-small" value="0"></td>
             <td><input type="text" name="attr_damsm" title="@{damsm}" class="sheet-short"></td>
             <td><button type="roll" name="roll_attacksm" title="%{attacksm}" value="/em rolls [[@{damsm}+[[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
@@ -1664,7 +1664,7 @@
             <th class="sheet-default-header" title="Amount of ammunition">Amount</th>
     </tr>
     <tr>
-            <td><input type='checkbox' name='attr_strbonus3' title="@{strbonus3}" value='1' /><span></span></td>
+            <td class="sheet-centering"><input type='checkbox' name='attr_strbonus3' title="@{strbonus3}" value='1' /><span></span></td>
             <td><input type="text" name="attr_ammoname" title="@{ammoname}" class="sheet-middle"></td>
             <td><input type="text" name="attr_damadj2" title="@{damadj2}" class="sheet-small" value="0"></td>
             <td><input type="text" name="attr_damsm2" title="@{damsm2}" class="sheet-short"></td>
@@ -1676,7 +1676,7 @@
     </table>
 <fieldset name="repeating_ammo" title="@{ammo}" class="repeating_ammo"><table style='border-collapse: collapse; border-spacing: 0;'>
     <tr>
-            <td><input type='checkbox' name='attr_strbonus3' title="@{repeating_ammo_$X_strbonus3}" value="1" /><span></span></td>
+            <td class="sheet-centering"><input type='checkbox' name='attr_strbonus3' title="@{repeating_ammo_$X_strbonus3}" value="1" /><span></span></td>
             <td><input type="text" name="attr_ammoname" title="@{repeating_ammo_$X_ammoname}" class="sheet-middle"></td>
             <td><input type="text" name="attr_damadj2" title="@{repeating_ammo_$X_damadj2}" class="sheet-small" value="0"></td>
             <td><input type="text" name="attr_damsm2" title="@{repeating_ammo_$X_damsm2}" class="sheet-short"></td>
