Updated to Expertise again

--- a/Celerity Lite/charsheet_celerity_lite.html
+++ b/Celerity Lite/charsheet_celerity_lite.html
@@ -160,7 +160,7 @@
         </div>
         <div class="expertisenamebox">
             <div class="label">
-                <span class="whiteout">Experience</span>
+                <span class="whiteout">Expertise</span>
             </div>
         </div>
         <div class="exp1box">
