--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1,5 +1,5 @@
 
-<input name="attr_version" type="hidden" value="4.11"/>
+<input name="attr_version" type="hidden" value="4.13"/>
 <input class="sheet_type" name="attr_sheet_type" type="hidden" value="pc"/>
 <input class="character-type" name="attr_flag_special" type="hidden" value="mundane"/>
 <div class="pc">
@@ -1070,7 +1070,7 @@
                   <h3 data-i18n="skill">skill</h3>
                   <select name="attr_skill" title="@{repeating_melee_${x}_skill}" value="@{closecombat}">
                     <optgroup label="Combat Skills">Combat Skills
-                      <option data-i18n="closecombat" value="@{closecombat}" selected="selected">Close Combat Group</option>
+                      <option data-i18n="closecombatgroup" value="@{closecombat}" selected="selected">Close Combat Group</option>
                       <option data-i18n="blades" value="@{blades}">Blades</option>
                       <option data-i18n="clubs" value="@{clubs}">Clubs</option>
                       <option data-i18n="exoticmelee" value="0">Blades</option>
@@ -3581,7 +3581,7 @@ const processingFunctions = {
     },
     determineConditionBase: (type, drone) => drone ? 6 : type === 'vehicle' ? 12 : 8,
     determineConditionAttribute: attrs => attrs.willpower ? attrs.willpower : attrs.body ? attrs.body : attrs.device_rating ? attrs.device_rating : 0,
-    determineWeaponAttributesByType: weaponType =>  weaponType === 'range' ? sheetAttributes.rangeAttributes : sheetAttributes.meleeAttribute,
+    determineWeaponAttributesByType: weaponType =>  weaponType === 'range' ? sheetAttributes.rangeAttributes : sheetAttributes.meleeAttributes,
     findFlagInKeys: attrs => Object.keys(attrs).find(key => key.includes('_flag')),
     findModifierInKeys: attrs => Object.keys(attrs).find(key => key.includes('_modifier')),
     processTempFlags: attrs => {
@@ -3856,13 +3856,10 @@ const updateMovement = () => {
 const updateDerivedAttribute = derivedAttribute => {
   getAttrs(sheetAttributes[derivedAttribute], attrs => {
     attrs = processingFunctions.shadowrun.attributeFactory(attrs)
-    const sum = processingFunctions.sumIntegers(Object.values(attrs))
-    processingFunctions.setAttributes({[derivedAttribute]: sum})
+    processingFunctions.setAttributes({[derivedAttribute]: attrs.total})
   })
 }
 
-//for Mocha Unit Texting
-//module.exports = updateFunctions;
 
 
   <!--Old functions working to become obsolete-->
