select option for custom assets

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -4527,7 +4527,8 @@
                             Ability One
                             <br>
                             <select name="attr_builder-ability-1" class="sheet-sub-dropdown">
-                                <option value="text" selected>Text Box</option>
+                                <option value="" selected disabled>Select</option>
+                                <option value="text">Text Box</option>
                                 <option value="text-input">Text Box with Input</option>
                             </select>
                             <textarea class="sheet-build-text" name="attr_builder-ability-1-text-area"></textarea>
@@ -4536,7 +4537,8 @@
                             Ability Two
                             <br>
                             <select name="attr_builder-ability-2" class="sheet-sub-dropdown">
-                                <option value="text" selected>Text Box</option>
+                                <option value="" selected disabled>Select</option>
+                                <option value="text" >Text Box</option>
                                 <option value="text-input">Text Box with Input</option>
                             </select>
                             <textarea class="sheet-build-text"  name="attr_builder-ability-2-text-area"></textarea>
@@ -4545,7 +4547,8 @@
                             Ability Three
                             <br>
                             <select name="attr_builder-ability-3" class="sheet-sub-dropdown">
-                                <option value="text" selected>Text Box</option>
+                                <option value="" selected disabled>Select</option>
+                                <option value="text">Text Box</option>
                                 <option value="text-input">Text Box with Input</option>
                             </select>
                             <textarea class="sheet-build-text"  name="attr_builder-ability-3-text-area"></textarea>
@@ -4570,7 +4573,7 @@
                                 <input type="checkbox" class="sheet-checkbox sheet-builder-titles-0 sheet-hidden-flex" name="attr_builder-titles-0">
                                 <input type="checkbox" class="sheet-checkbox sheet-builder-titles-1 sheet-hidden-flex" name="attr_builder-titles-1">
                                 <div class="sheet-builder-titles-1 sheet-hidden-flex">
-                                    <input type="text" class="sheet-border-bottom sheet-no-border sheet-view-title-width" name="attr_builder-titles-1" value="">
+                                    <input type="text" class="sheet-border-bottom sheet-no-border sheet-view-title-width" name="attr_builder-titles-1-1" value="">
                                 </div>
                                 <input type="checkbox" class="sheet-checkbox sheet-builder-titles-2 sheet-hidden-flex" name="attr_builder-titles-2">
                                 <div class="sheet-builder-titles-2 sheet-hidden-flex">
