Shuttle Log Progress
Nearly completed the shuttle log.

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -5628,7 +5628,7 @@
 <!-- ----------------------- -->
 <div class="sheetType shuttleSheet">
 	<div class="shuttleLogSheetGrid">
-		<div class="topLineText">Designation:</div>
+		<div class="topLineTextSpaceScale">Designation:</div>
 		<div class="aliasThreatNameLong threatTextBox"><input type="text" name="attr_name" class="threatTextBox" /></div>
 		<div class="sophontAspectColumnA">Concept:</div>
 		<div class="sophontTextColumnFull threatTextBox"><input type="text" name="attr_concept" /></div>
@@ -5696,11 +5696,11 @@
 		<div class="sophontAspectColumnB">Tonnage:</div>
 		<div class="sophontTextColumnB threatTextBox"><input type="number" min="20" max="320" name="attr_size" class="threatNumberBox" /></div>
 		<div class="sophontAspectColumnA">Notes:</div>
-		<div class="sophontTextColumnFull threatTextBox creatureTagBox"><textarea name="attr_notes" class="threatTextBox creatureTagBox"></textarea></div>
+		<div class="sophontTextColumnFull threatTextBox shuttleTagBox"><textarea name="attr_notes" class="threatTextBox shuttleTagBox"></textarea></div>
 
 		<!--Condition Slots-->
 		<div class="shuttleSquadronConditionWidget">
-			<div class="sophontConditionTitle">Conditions Slots</div>
+			<div class="sophontConditionTitle">Squadrons</div>
 			<div class="sophontConditionNumber"><input type="text" name="attr_additionalCompositeSophont1" class="sophontConditionNumber" /></div>
 			<!--Armour 1-->
 			<input type="checkbox" class="hideCheckbox smallCheckbox sophontConditionCheckbox sophontCondition1" name="attr_armourSlot1" value="1" />
@@ -5915,21 +5915,38 @@
 			<span class="integrity largePips sophontCondition11 additionalSophontColumn"></span>
 		</div>
 		<div class="fourSectionGrid">
-			<div class="sectionTitle">Sections</div>
-			<div class="sectionA section1">
-				<div class="">Tug</div>
-				<div class="sophontAspectColumnA">Tags:</div>
-				<div class="sophontTextColumnA threatTextBox creatureTagBox"><textarea name="attr_tags" class="threatTextBox creatureTagBox"></textarea></div>
-				<input type="number" name="attr_damageTotal" min="0" max="10" class="threatDamageBox" /><span class="droneDamageBoxBG"></span>
+			<h4 class="sectionTitle">Sections</h4>
+			<div class="sectionA section1 sectionGrid">
+				<input type="checkbox" class="hideCheckbox smallCheckbox sectionCheckbox" name="attr_sectionInstalled1" value="1" checked="checked" disabled="disabled"/>
+				<span class="smallPips hexSelector sectionCheckbox"></span>
+				<div class="sectionName">Tug</div>
+				<div class="sectionTagTitle">Tags:</div>
+				<div class="sectionTagBoxLocation"><textarea name="attr_tags" class="threatTextBox sectionTagBox"></textarea></div>
+				<input type="number" name="attr_damageTotal" min="0" max="10" class="sectionDamageBox" /><span class="sectionDamageBoxBG"></span>
 			</div>
-			<div class="sectionB section1">
-
+			<div class="sectionB section1 sectionGrid">
+				<input type="checkbox" class="hideCheckbox smallCheckbox sectionCheckbox" name="attr_sectionInstalled2" value="1" />
+				<span class="smallPips hexSelector sectionCheckbox"></span>
+				<div class="sectionName">Utility 0</div>
+				<div class="sectionTagTitle">Tags:</div>
+				<div class="sectionTagBoxLocation"><textarea name="attr_tags2" class="threatTextBox sectionTagBox"></textarea></div>
+				<input type="number" name="attr_damageTotal2" min="0" max="10" class="sectionDamageBox" /><span class="sectionDamageBoxBG"></span>
 			</div>
-			<div class="sectionA section2">
-
+			<div class="sectionA section2 sectionGrid">
+				<input type="checkbox" class="hideCheckbox smallCheckbox sectionCheckbox" name="attr_sectionInstalled3" value="1" />
+				<span class="smallPips hexSelector sectionCheckbox"></span>
+				<div class="sectionName">Utility 1</div>
+				<div class="sectionTagTitle">Tags:</div>
+				<div class="sectionTagBoxLocation"><textarea name="attr_tags3" class="threatTextBox sectionTagBox"></textarea></div>
+				<input type="number" name="attr_damageTotal3" min="0" max="10" class="sectionDamageBox" /><span class="sectionDamageBoxBG"></span>
 			</div>
-			<div class="sectionB section2">
-
+			<div class="sectionB section2 sectionGrid">
+				<input type="checkbox" class="hideCheckbox smallCheckbox sectionCheckbox" name="attr_sectionInstalled4" value="1" />
+				<span class="smallPips hexSelector sectionCheckbox"></span>
+				<div class="sectionName">Utility 2</div>
+				<div class="sectionTagTitle">Tags:</div>
+				<div class="sectionTagBoxLocation"><textarea name="attr_tags4" class="threatTextBox sectionTagBox"></textarea></div>
+				<input type="number" name="attr_damageTotal4" min="0" max="10" class="sectionDamageBox" /><span class="sectionDamageBoxBG"></span>
 			</div>
 		</div>
 	</div>
