add status toggle

--- a/City Of Mist Offical/city-of-mist.html
+++ b/City Of Mist Offical/city-of-mist.html
@@ -1,4 +1,4 @@
-<input name="attr_version" type="hidden" value="1.01"/>
+<input name="attr_version" type="hidden" value="1.02"/>
 
 <!-- SHEET WORKERS START-------------------------------------------------------- SHEET WORKERS START -->
 
@@ -5771,6 +5771,8 @@ setAttrs(settings);
 
 <!-- CORE MOVES START ---------------------------------------------------------- CORE MOVES START -->
 
+<input class="status-toggle" name="attr_status_only" type="hidden" value=""/>
+
 <div class="moves_mat">
     
     <div class="cinematic_moves_sheet shadow">
@@ -10932,6 +10934,16 @@ setAttrs(settings);
 <!-- PLAYBOOK MAT END --------------------------------------------------------- PLAYBOOK MAT END -->
 
 <!-- STATUS CARDS -->
+
+
+<div class='sheet-status_card_title'>
+  <span style='color: #7e7d7d'>Status Only</span>
+  <label class="switch" title="status only">
+    <input class="status-toggle" name="attr_status_only" type="checkbox" value="true"/>
+    <span class="slider"></span>
+  </label>
+</div>
+
 <div class="status_card_mat">
 
 <div class='status_card status_card_1'>
