Updated image locations

--- a/Torg Eternity/Torg Eternity.html
+++ b/Torg Eternity/Torg Eternity.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="top">
 
-        <img class="logo"  src="https://i.imgur.com/0YftJQD.png"/> 
+        <img class="logo"  src="https://raw.githubusercontent.com/G-G-G/roll20-character-sheets/torgeternity/Torg%20Eternity/images/TE_logo.png"/> 
         <div class="personal-data">
             
             <span class="lheader axioms">Name </span>
