Tweaked Tug Armour and updated Json
Switched Launchbay Tug Armour printer to use a better grid, which looks like the ones used other places
Updated Json file with info on Capital ship.
Increased Version number to 2

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -27,7 +27,7 @@
 		</h4>
 
 	</div>
-	<span class="version">Version v1.75</span>
+	<span class="version">Version v2.00</span>
 </div>
 
 <input type="radio" name="attr_selectedSheet" class="hidden crewmemberSelector" value="1" checked="checked">
@@ -1880,11 +1880,18 @@
 				<div class="launchBayArmourCost">2</div>
 				<div class="launchBayArmourFitting">Armour</div>
 				<div class="launchBayArmourPips">
-					<input type="checkbox" name="attr_tugArmour3Slot" class="hideCheckbox inlineCheckboxSmall" value="1" /><span class="inlineArmourSelectors hexSelector"></span><input name="attr_tugArmour3Condition" type="checkbox" class="hideCheckbox inlineCheckboxMedium" value="1" /><span class="inlineArmour armour"></span>
-					&ensp;
-					<input type="checkbox" name="attr_tugArmour2Slot" class="hideCheckbox inlineCheckboxSmall" value="1" /><span class="inlineArmourSelectors hexSelector"></span><input name="attr_tugArmour2Condition" type="checkbox" class="hideCheckbox inlineCheckboxMedium" value="1" /><span class="inlineArmour armour"></span>
-					&ensp;
-					<input type="checkbox" name="attr_portArmour1Slot" class="hideCheckbox inlineCheckboxSmall" value="1" /><span class="inlineArmourSelectors hexSelector"></span><input name="attr_tugArmour1Condition" type="checkbox" class="hideCheckbox inlineCheckboxMedium" value="1" /><span class="inlineArmour armour"></span>
+					<input type="checkbox" name="attr_tugArmour3Slot" class="hideCheckbox smallCheckbox launchBayArmourPip1" value="1" />
+					<span class="smallPips hexSelector launchBayArmourPip1"></span>
+					<input name="attr_tugArmour3Condition" type="checkbox" class="hideCheckbox mediumCheckbox launchBayArmourPip2" value="1" />
+					<span class="mediumPips armour launchBayArmourPip2"></span>
+					<input type="checkbox" name="attr_tugArmour2Slot" class="hideCheckbox smallCheckbox launchBayArmourPip3" value="1" />
+					<span class="smallPips hexSelector launchBayArmourPip3"></span>
+					<input name="attr_tugArmour2Condition" type="checkbox" class="hideCheckbox mediumCheckbox launchBayArmourPip4" value="1" />
+					<span class="mediumPips armour launchBayArmourPip4"></span>
+					<input type="checkbox" name="attr_portArmour1Slot" class="hideCheckbox smallCheckbox launchBayArmourPip5" value="1" />
+					<span class="smallPips hexSelector launchBayArmourPip5"></span>
+					<input name="attr_tugArmour1Condition" type="checkbox" class="hideCheckbox mediumCheckbox launchBayArmourPip6" value="1" />
+					<span class="mediumPips armour launchBayArmourPip6"></span>
 				</div>
 				<div class="launchBaycapacityPips">
 					<input type="radio" class="hideCheckbox inlineCapacityCheckboxSmall" name="attr_tugReactor" value="1" /><span class="inlineCapacityPipsSmall capacityPips"></span>
