Fixed oversized textarea on behemoth sheet

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -6921,7 +6921,7 @@
 					</select>
 				</div>
 				<div class="sectionTagTitle">Tags:</div>
-				<div class="sectionTagBoxLocation"><textarea name="attr_tags" class="threatTextBox sectionTagBox"></textarea></div>
+				<div class="sectionTagBoxLocation"><textarea name="attr_tags" class="threatTextBox sectionShipTagBox"></textarea></div>
 				<!--Conditions-->
 				<div class="sectionShipConditionWidget">
 					<!--Slot 1-->
@@ -6983,7 +6983,7 @@
 					</select>
 				</div>
 				<div class="sectionTagTitle">Tags:</div>
-				<div class="sectionTagBoxLocation"><textarea name="attr_tags2" class="threatTextBox sectionTagBox"></textarea></div>
+				<div class="sectionTagBoxLocation"><textarea name="attr_tags2" class="threatTextBox sectionShipTagBox"></textarea></div>
 				<input type="number" name="attr_damageTotal2" min="0" max="10" class="sectionDamageBox" /><span class="sectionDamageBoxBG"></span>
 				<!--Conditions-->
 				<div class="sectionShipConditionWidget">
@@ -7046,7 +7046,7 @@
 					</select>
 				</div>
 				<div class="sectionTagTitle">Tags:</div>
-				<div class="sectionTagBoxLocation"><textarea name="attr_tags3" class="threatTextBox sectionTagBox"></textarea></div>
+				<div class="sectionTagBoxLocation"><textarea name="attr_tags3" class="threatTextBox sectionShipTagBox"></textarea></div>
 				<input type="number" name="attr_damageTotal3" min="0" max="10" class="sectionDamageBox" /><span class="sectionDamageBoxBG"></span>
 				<!--Conditions-->
 				<div class="sectionShipConditionWidget">
@@ -7109,7 +7109,7 @@
 					</select>
 				</div>
 				<div class="sectionTagTitle">Tags:</div>
-				<div class="sectionTagBoxLocation"><textarea name="attr_tags4" class="threatTextBox sectionTagBox"></textarea></div>
+				<div class="sectionTagBoxLocation"><textarea name="attr_tags4" class="threatTextBox sectionShipTagBox"></textarea></div>
 				<!--Conditions-->
 				<div class="sectionShipConditionWidget">
 					<!--Slot 1-->
