Last minute tweaks

--- a/Torg Eternity/Torg Eternity.html
+++ b/Torg Eternity/Torg Eternity.html
@@ -1229,7 +1229,7 @@
                 </button>
                 <div class="grid-contents weapons-titles head">
                     <span class="head" title="Click the name to roll an attack.">Name</span>
-                    <span class="head">+</span>
+                    <span class="head" tile="Fixed bonus to attack">+A</span>
                     <span class="head">Axiom</span>
                     <span class="head">Range</span>
                     <span class="head">Ammo</span>
